--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "index.js": "^0.0.3",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
+    "node": "^21.1.0",
     "nodemon": "^3.0.1"
   }
 }
